feat(auth): add register api
