# kelompok/kelompok_29/src/backend/routes/api.php
@@ -7,6 +7,11 @@ $routes = [
     ],
     [
         'method' => 'POST',
+        'path' => 'auth/register',
+        'controller' => __DIR__ . '/../controllers/auth/register.php',
+    ],
+    [
+        'method' => 'POST',
         'path' => 'auth/logout',
         'controller' => __DIR__ . '/../controllers/auth/logout.php',
     ],
